fix unthemed 'jump to unread messages'

--- a/src/index.scss
+++ b/src/index.scss
@@ -361,6 +361,11 @@
   --bg-positive-active: hsl(346, 100%, 50%, 15%);
   --bg-positive-border: hsl(346, 100%, 50%, 40%);
 
+  --bg-primary: hsl(346, 100%, 50%);
+  --bg-primary-hover: hsl(346, 100%, 50%, 8%);
+  --bg-primary-active: hsl(346, 100%, 50%, 15%);
+  --bg-primary-border: hsl(346, 100%, 50%, 40%);
+
   /* text color | --tc-[background type]-[priority]: value */
   --tc-surface-high: rgb(249, 240, 2, 94%);
   --tc-surface-normal: rgba(255, 251, 222, 94%);
@@ -387,6 +392,11 @@
   --bg-positive-hover: rgba(255, 251, 222, 8%);
   --bg-positive-active: rgba(255, 251, 222, 15%);
   --bg-positive-border: rgba(255, 251, 222, 40%);
+
+  --bg-primary: rgb(255, 251, 222, 90%);
+  --bg-primary-hover: rgba(255, 251, 222, 8%);
+  --bg-primary-active: rgba(255, 251, 222, 15%);
+  --bg-primary-border: rgba(255, 251, 222, 40%);
 
   /* text color | --tc-[background type]-[priority]: value */
   --tc-surface-high: rgb(255, 251, 222, 90%);
